--- a/SDET_17/test-output/old/Suite/methods-not-run.html
+++ b/SDET_17/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.crm.comcast.VtigerTest.CreateOrganizationTest.createOrgWithIndustry</td></tr>
+<tr><td>com.crm.comcast.VtigerTest.CreateOrganizationTest.createOrgTest</td></tr>
 </table>
