--- a/SDET_17/test-output/old/Default suite/classes.html
+++ b/SDET_17/test-output/old/Default suite/classes.html
@@ -4,25 +4,51 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.crm.vtigertests.CreateOrganisationWithIndustry</td>
+<td>com.crm.comcast.VtigerTest.CreateOrganizationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createOrganisationWithIndustryTest</td>
-<td>&nbsp;</td></tr>
+<td>createOrgWithIndustry</td>
+<td>regressionTest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>createOrgTest</td>
+<td>smokeTest </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>configBC</td>
+<td>regressionTest smokeTest </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>regressionTest smokeTest </td>
+</tr>
+<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>regressionTest smokeTest </td>
+</tr>
+<tr>
 <td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>configAC</td>
+<td>regressionTest smokeTest </td>
 </tr>
 </table>
