--- a/SDET_17/test-output/old/Default suite/groups.html
+++ b/SDET_17/test-output/old/Default suite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regressionTest</td><td>CreateOrganizationTest.createOrgWithIndustry()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@778d1062]<br/></td></tr>
+<tr><td>smokeTest</td><td>CreateOrganizationTest.createOrgTest()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@778d1062]<br/></td></tr>
+</table>
