--- a/SDET_17/test-output/old/Suite/methods.html
+++ b/SDET_17/test-output/old/Suite/methods.html
@@ -1,6 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="62f9ae">  <td>21/06/24 15:22:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateCustomerTest.createCustomerTest(org.testng.xml.XmlTest)[pri:0, instance:DataDrivenTesting.CreateCustomerTest@61001b64]">createCustomerTest</td> 
-  <td>main@364597300</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>21/07/05 13:11:15</td>   <td>0</td> <td title="&gt;&gt;BaseClass.configBS()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@769f71a9]">&gt;&gt;configBS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1058634310</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>21/07/05 13:11:15</td>   <td>70</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBC(java.lang.String)[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@769f71a9]">&gt;&gt;configBC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1688939647</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>21/07/05 13:11:15</td>   <td>70</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBC(java.lang.String)[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@4b5a5ed1]">&gt;&gt;configBC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1151154427</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>21/07/05 13:11:20</td>   <td>4538</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@4b5a5ed1]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1151154427</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>21/07/05 13:11:32</td>   <td>16729</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@769f71a9]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1688939647</td>   <td></td> </tr>
+<tr bgcolor="68efa0">  <td>21/07/05 13:11:36</td>   <td>20373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrganizationTest.createOrgTest()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@4b5a5ed1]">createOrgTest</td> 
+  <td>TestNG-tests-1@1151154427</td>   <td></td> </tr>
+<tr bgcolor="68efa0">  <td>21/07/05 13:11:40</td>   <td>24590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrganizationTest.createOrgWithIndustry()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@769f71a9]">createOrgWithIndustry</td> 
+  <td>TestNG-tests-2@1688939647</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>21/07/05 13:11:41</td>   <td>25653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@769f71a9]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1688939647</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>21/07/05 13:11:41</td>   <td>25924</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAC()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@769f71a9]">&lt;&lt;configAC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>21/07/05 13:12:04</td>   <td>48917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@4b5a5ed1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1151154427</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>21/07/05 13:12:07</td>   <td>51545</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAC()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@4b5a5ed1]">&lt;&lt;configAC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1151154427</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>21/07/05 13:12:07</td>   <td>51685</td> <td title="&lt;&lt;BaseClass.configAS()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@769f71a9]">&lt;&lt;configAS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1058634310</td>   <td></td> </tr>
 </table>
