--- a/SDET_17/test-output/old/Default suite/methods-alphabetical.html
+++ b/SDET_17/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="93de87">  <td>21/07/05 12:41:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAC()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@778d1062]">&lt;&lt;configAC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="93de87">  <td>21/07/05 12:41:26</td>   <td>219</td> <td title="&lt;&lt;BaseClass.configAS()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@778d1062]">&lt;&lt;configAS</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1782580546</td>   <td></td> </tr>
-<tr bgcolor="93de87">  <td>21/07/05 12:41:18</td>   <td>-7122</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBC()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@778d1062]">&gt;&gt;configBC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1782580546</td>   <td></td> </tr>
-<tr bgcolor="93de87">  <td>21/07/05 12:41:18</td>   <td>-7158</td> <td title="&gt;&gt;BaseClass.configBS()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@778d1062]">&gt;&gt;configBS</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1782580546</td>   <td></td> </tr>
-<tr bgcolor="e0979d">  <td>21/07/05 12:41:25</td>   <td>-44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrganizationTest.createOrgTest()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@778d1062]">createOrgTest</td> 
-  <td>main@1782580546</td>   <td></td> </tr>
-<tr bgcolor="e0979d">  <td>21/07/05 12:41:25</td>   <td>-27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrganizationTest.createOrgWithIndustry()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@778d1062]">createOrgWithIndustry</td> 
-  <td>main@1782580546</td>   <td></td> </tr>
-<tr bgcolor="93de87">  <td>21/07/05 12:41:22</td>   <td>-3895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@778d1062]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1782580546</td>   <td></td> </tr>
-<tr bgcolor="93de87">  <td>21/07/05 12:41:25</td>   <td>-29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@778d1062]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1782580546</td>   <td></td> </tr>
-<tr bgcolor="93de87">  <td>21/07/05 12:41:25</td>   <td>-33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@778d1062]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="93de87">  <td>21/07/05 12:41:25</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.crm.comcast.VtigerTest.CreateOrganizationTest@778d1062]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="689365">  <td>21/07/07 16:51:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest1.connectNet()[pri:0, instance:practice.Test.SampleTest1@4df50bcc]">connectNet</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="689365">  <td>21/07/07 16:51:34</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest1.connectNet()[pri:0, instance:practice.Test.SampleTest1@4df50bcc]">connectNet</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="689365">  <td>21/07/07 16:51:34</td>   <td>43</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest1.connectNet()[pri:0, instance:practice.Test.SampleTest1@4df50bcc]">connectNet</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="689365">  <td>21/07/07 16:51:34</td>   <td>50</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest1.connectNet()[pri:0, instance:practice.Test.SampleTest1@4df50bcc]">connectNet</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="689365">  <td>21/07/07 16:51:34</td>   <td>58</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest1.connectNet()[pri:0, instance:practice.Test.SampleTest1@4df50bcc]">connectNet</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
 </table>
